--- a/t1_analysis.Rmd
+++ b/t1_analysis.Rmd
@@ -22,55 +22,42 @@ map<-map_data("state")
 theme_set(theme_minimal())
 ```
 
-# TO DO 
 
+# Introduction
 
+<!-- HOW ARE PROJECTS / PROBLEMS OF SETTLER COLONIAL GOVERNANCE RESOLVED? WHAT ORGS AND INSTITUTIONS ARE BUILT?  -->
 
-
-
-leaving out railroad grants induces bias if morill or homestead grants are negatively correlated with railroad grants. 
-
-2. Lit review
-3. writeup demographics and bivars
-4. models
-
-
-
-# Theoretical framework
-
-HOW ARE PROJECTS / PROBLEMS OF SETTLER COLONIAL GOVERNANCE RESOLVED? WHAT ORGS AND INSTITUTIONS ARE BUILT? 
-
-Settler colonial regimes seek to resolve different problems across places and within places over time. This paper proposes a quantitative framework for understanding how the geographic process of settler colonization results in different styles of governance across places. We show that a series of historical economic and demographic measures (proxies for variation in modes of settler colonial extraction and exploitation) are closely related to trajectories of state formation across places, measured as employment levels in core social policy system sectors. 
+Settler colonial regimes seek to resolve different problems across places and within places over time. This paper proposes a quantitative framework for understanding how the geographic process of settler colonization results in different styles of governance across places (simultaneous settler projects). We show that a series of historical economic and demographic measures (proxies for variation in modes of settler colonial extraction and exploitation) are closely related to trajectories of state formation across places, measured as employment levels in core social policy system sectors. 
 
 At a sub-national level, settler colonial regimes seek to address a range of problems inherent to their nation-building project: the dispossession of indigenous lands, the erasure of indigenous peoples, the exploitation of racially marginalized laborers, and the reproduction and expansion of the settler polity. We show that the historical geography of these problems is closely related to the policy infrastructure that governments develop. The consequences of this variation in trajectories are likely broad and varied.
 
-Historians tell us these projects were active locally. 1. Frontier; 2. Jim Crow; 3. Metropole. Can we use demographic, legal, and employment data to map it out / model it?
+<!-- Historians tell us these projects were active locally. 1. Frontier; 2. Jim Crow; 3. Metropole. Can we use demographic, legal, and employment data to map it out / model it? -->
 
 Following Wolfe, DuBois, etc, variation in the interests of elites across places (material + cultural) drives variation in processes of racialization across places. The state is a key vector through which racialization is implemented. Early 20th c. saw rapid development and expansion of social state. Can we observe differences in social state developmental trajectories as a function of variation in elite interests in particular racial projects? Are regional differences in social policy regimes a function of the social, demographic, and economic interests of regional elites? 
 
-Stratification in frontier was settler social democracy; flat social relations among settlers, extreme hostility to Native. Stratification in Jim Crow was rigid racial + class hierarchy; extreme wealth concentration and rigid racialized exploitation + social exclusion. Stratification in metropole was more fluid racial + class hierarchy; extreme concentration but porous boundaries, fewer bright lines.
+<!-- Stratification in frontier was settler social democracy; flat social relations among settlers, extreme hostility to Native. Stratification in Jim Crow was rigid racial + class hierarchy; extreme wealth concentration and rigid racialized exploitation + social exclusion. Stratification in metropole was more fluid racial + class hierarchy; extreme concentration but porous boundaries, fewer bright lines. -->
 
-Basic theory though is that interests of elites are racialized as a function of local social relations, and inform social policy development. This can lock in particular racial regimes over time as social policy does work on social groups.
+<!-- Basic theory though is that interests of elites are racialized as a function of local social relations, and inform social policy development. This can lock in particular racial regimes over time as social policy does work on social groups. -->
 
 <!-- 1. Frontier settler polity -> elite interest in disposession / assimiatilion -> aggressive paternalistic welfare state for AIAN, social democracy for settlers -->
 <!-- 2. Jim Crow -> elite interest in exploitation and exclusion -> elite paternalism, malign neglect, hard coercion -->
 <!-- 3. Metropole settler polity -> elite interests in labor discipline / immig assimilation -> progressive paternalism, strong coercive welfare state for W, hard coercion and contested welfare for Blk -->
 
-IMPLICATIONS - a) settler colonization as structure / structuring: context is key, and when SC is active, likely can be predictive; b) durable consequences for policy institutions (legacies, etc); c) comparative state formation / comparative welfare / carceral states. 
+<!-- IMPLICATIONS - a) settler colonization as structure / structuring: context is key, and when SC is active, likely can be predictive; b) durable consequences for policy institutions (legacies, etc); c) comparative state formation / comparative welfare / carceral states.  -->
 
-# What is already known about settler colonization and state formation in late 19th and Early 20th c. 
+<!-- # What is already known about settler colonization and state formation in late 19th and Early 20th c.  -->
 
-## Frontier
+<!-- ## Frontier -->
 
-review here
+<!-- review here -->
 
-## Jim Crow
+<!-- ## Jim Crow -->
 
-review here
+<!-- review here -->
 
-## Metropole 
+<!-- ## Metropole  -->
 
-review here
+<!-- review here -->
 
 ```{r read}
 # ### on libra, read raw
@@ -233,41 +220,43 @@ dat<-dat %>%
 lgu_parcels<-read_csv("./data/landgrabu-data/Morrill_Act_of_1862_Indigenous_Land_Parcels_Database/CSVs/Parcels.csv")
 ```
 
-# methods
+# Methods
 
 We are generally interested in evaluating whether a set of policy outcomes {employment, infrastructure} are related to a set of demographic and economic predictors {population composition, economic activity, ownership regime}. 
 
 To do so, we rely on historical data from the US Census accessed via IPUMS (Ruggles et al), from the Bureau of Land Management (Archived by the University of Nebraska), from the US Department of the Interior (CITE BS REPORT), and from records our team digitized from the Commissioner on Indian Affairs (CITE). 
 
-Less interested in causal identification, more interested in understanding spatial patterns and trajectories. We already know there was spatial variation in settler colonial contexts and policy systems, trying to see if we can capture it systematically with national quant data. Move from specific to general. 
+<!-- Less interested in causal identification, more interested in understanding spatial patterns and trajectories. We already know there was spatial variation in settler colonial contexts and policy systems, trying to see if we can capture it systematically with national quant data. Move from specific to general.  -->
 
-demonstrate var(infrastructure), show e[infrastructure] = f(settler interests)
+Generally our approach demonstrates suggests that state formation in a particular place *s* and time *t* is a function of settler elite interests specific to that time and place. 
 
-negative case re: black underdevelopment h1: no social workers in places with large black pops at period of emergence in t1
+\[E[\textrm{infrastructure}_{st}] = f(\textrm{settler interests}_{st})\]
 
-positive case: white immigrants -> more social workers in t1
+<!-- negative case re: black underdevelopment h1: no social workers in places with large black pops at period of emergence in t1 -->
 
-here we are looking at how contexts in post-civil war -> progressive era US related to the emergence of the social state in the us. 
+<!-- positive case: white immigrants -> more social workers in t1 -->
 
-## NOTES ON GEOGRAPHIES and MEASUREMENT
+<!-- here we are looking at how contexts in post-civil war -> progressive era US related to the emergence of the social state in the us.  -->
 
-TALK ABOUT STATES, TERRITORIES, WESTERN EXPANSION. CONTESTATION AND TRANSFORMATION ARE KEY PROCESSES OF COLONIZATION. SETTLER COLONIALISM IS A SPATIAL STRUCTURE, NOT A SETTLED FACT, ESP VISIBLE IN THIS PERIOD. 
+<!-- ## NOTES ON GEOGRAPHIES and MEASUREMENT -->
 
-STATES ARE WEIRD UNITS, BUT MAP CLEANLY ONTO ADMIN / LEGAL UNITS. TRIBAL NATIONS BOUNDARIES ARE ALSO V USEFUL, AS ARE SUB-STATE ANALYSES (EG CITIES COUNTIES ETC). 
+<!-- TALK ABOUT STATES, TERRITORIES, WESTERN EXPANSION. CONTESTATION AND TRANSFORMATION ARE KEY PROCESSES OF COLONIZATION. SETTLER COLONIALISM IS A SPATIAL STRUCTURE, NOT A SETTLED FACT, ESP VISIBLE IN THIS PERIOD.  -->
 
-geography itself endogenous to settler colonization, this is tricky!
+<!-- STATES ARE WEIRD UNITS, BUT MAP CLEANLY ONTO ADMIN / LEGAL UNITS. TRIBAL NATIONS BOUNDARIES ARE ALSO V USEFUL, AS ARE SUB-STATE ANALYSES (EG CITIES COUNTIES ETC).  -->
 
-## sources of data
+<!-- geography itself endogenous to settler colonization, this is tricky! -->
 
-Census; ARCIA; Interior; etc
+## Sources of data
 
-CONSIDER GOING 1880 - 1920 to capture period more effectively? no social workers will be in there tho...
+Census (pop, employment, group quarters); ARCIA; Interior; BLM; US Forest Service. 
 
-we treat police, education, and social work employment as core areas of the domestic social state. what is the name for that? the welfare state? the carceral state? the therapeutic state? that thing. 
+<!-- CONSIDER GOING 1880 - 1920 to capture period more effectively? no social workers will be in there tho... -->
 
-let's look at how it played out in the progressive era across states and regions. we are cutting the data at 1900 - 1930, wanting to capture the boom in progressive reforms that started in the late 1890s and continued until the great depression.
+<!-- we treat police, education, and social work employment as core areas of the domestic social state. what is the name for that? the welfare state? the carceral state? the therapeutic state? that thing.  -->
 
-First, the full country. How many people were employed in these social regulation / reproduction functions over time per capita?
+<!-- let's look at how it played out in the progressive era across states and regions. we are cutting the data at 1900 - 1930, wanting to capture the boom in progressive reforms that started in the late 1890s and continued until the great depression. -->
+
+<!-- First, the full country. How many people were employed in these social regulation / reproduction functions over time per capita? -->
 
 We use IPUMS 100% census data for 1900 - 1930 to count employment levels nationally and across states. A census taker is counted as a police employee if their code for the IPUMS variable OCC1950 is equal to one of {771 Marshals and constables, 773 Policemen and detectives, 782 Sheriffs and bailiffs}; coded social worker if OCC1950 is coded 079 Social and welfare worker; and coded teacher if OCC1950 is equal to 093 Teachers (n.e.c.). We convert these into employment rates per 1,000 population using the full population at the state (and nation) level. 
 
@@ -285,9 +274,7 @@ The works of settler colonial and racial politics historical and theoretical sch
 
 ### Jim Crow and the salience of anti-Blackness for local social and carceral policymaking
 
-Figure \@ref(fig:blk-map) shows the distribution of the recorded Black population across US states in 1920. Panel 1 displays this data as the relative population composition of Black residents relative to to all residents, and panel 2 displays the absolute size of the Black population across US states. 
-
-DISCUSS THE DISTRIBUTION
+Figure \@ref(fig:blk-map) shows the distribution of the recorded Black population across US states in 1920. Panel 1 displays this data as the relative population composition of Black residents relative to to all residents, and panel 2 displays the absolute size of the Black population across US states. We display panel 2 on a logarithmic scale to enable closer examination of the first stage of the Great Migration. While Black populations were a low relative share of the population in places like New York, Pennsylvania and Illinois in 1920, there were substantial and growing Black populations in these states, as shown on the count, rather than proportion, scale. 
 
 ```{r blk-map, fig.cap = "Black population, US States 1920 (note log scale)"}
 p1<-dat %>% 
@@ -317,6 +304,24 @@ p2<-dat %>%
 grid.arrange(p1, p2, nrow = 1)
 ```
 
+
+Figure \@ref(fig:blk-ts) shows two sets of time series describing the Black population in US States between 1870 and 1930 using the US Census. Panel 1 shows the size of the Black population in counts, represented on a logarithmic scale to allow for easier comparisons of population order of magnitude. Panel 2 shows the proportion of a state's population reported as Black on the US Census, to allow for comparisons of population composition across places. 
+
+Black populations increased uniformly across all US states between 1870 and 1930 (see panel 1), though there are clear differences in rates of increase and absolute levels across states. For example, in the Northeast region, the primarily rural states of Maine, Vermont, and New Hampshire had relatively small Black populations across the time period. In Maine, reported Black populations were between 300 and 2400 during this period (1% sample data, NO standard errors REPORTED HERE because it's a pain but I'll keep working on it). By contrast, states with large and growing cities, like New York, New Jersey, and Pennsylvania all had large Black populations that grew substantially between 1870 and 1930. For example, Pennsylvania's Black population was recorded at about 70,000 in 1870, and 430,000 in 1930.
+
+Note that some places described in these plots were not admitted as states at the beginning of this time period (CHECK US CENSUS QUALITY IN TERRITORIES), and were intensely contested in military and non-military conflicts between the US government and tribal nations. MORE HERE. HOW DOES CONTESTATION ENTER INTO THE STAT PROCESS? CENSUS IS COUNTING SETTLERS + ENSLAVED, SO THATS STILL VALID FOR CONTEXTS OF SET COL ASSUMING GOOD TERRITORIAL MEASUREMENT (CHECK THIS!).
+
+Similar population trends are evident in the North Central region (commonly referred to as the Midwest). States with large cities, like Illinois, Ohio, Missouri, and Michigan had both relatively high Black populations at the beginning of the period and saw substantial growth in these populations over time. For example, the US Census recorded about 31,000 Black residents in Illinois in 1870. By 1930, the Census recorded about 330,000 Black residents of Illinois. Note that some of these places were not admitted as states at the beginning of this time period. (CHECK US CENSUS QUALITY IN TERRITORIES), and were sites of ongoing military conflicts between the US government and tribal nations.
+
+In the Western Region, states reported uniformly small Black populations at the beginning of this period, with varying (but positive) rates of growth. Note that many of these places were not yet states at the beginning of the time series; only California, Oregon, and Nevada had been admitted as states by 1870. California recorded the largest Black population by the end of the period. The Census records an increase in Black population in California from about 3000 in 1870 to about 84,000 in 1930. Arizona, Colorado, and Washington had smaller but substantial Black populations by the end of the time period, at around 10,000 persons. 
+
+In the Southern Region (which includes all states that seceded to join the former Confederate States of America in addition to Delaware, Maryland, West Virginia, Kentucky, and Oklahoma), Black populations were consistently large during this period, with the largest populations in states in which white elites had enslaved millions of Black people for work in plantation-driven agriculture, like Georgia, Mississippi, and South Carolina. For example, the Census recorded 540,000 Black residents of Georgia in 1870, increasing to 1,100,000 Black residents in 1930. 
+
+Note though, that these increases in population size do not always mirror trends in relative population composition (see Panel 2). During this period, even as Black populations grew dramatically in some Northeastern and Midwestern states during the first Great Migration, proportional population shares of Black residents remained low and relatively stable. In the South, even as Black populations continued to grow in absolute terms, the proportional population share of Black residents was decreasing consistently throughout the region. 
+
+This divergence between absolute and relative population trends illustrates that Black population share likely fails to adequately capture the salience of race for local political contexts. 
+
+Next let's look at sharecropping
 
 ```{r blk-ts, fig.cap = "Black population by state 1870-1940"}
 p1<-ggplot(dat,
@@ -359,23 +364,7 @@ p2<-ggplot(dat,
 grid.arrange(p2, p1, nrow = 1)
 ```
 
-Figure \@ref(fig:blk-ts) shows two sets of time series describing the Black population in US States between 1870 and 1930 using the US Census. Panel 1 shows the size of the Black population in counts, represented on a logarithmic scale to allow for easier comparisons of population order of magnitude. Panel 2 shows the proportion of a state's population reported as Black on the US Census, to allow for comparisons of population composition across places. 
-
-Black populations increased uniformly across all US states between 1870 and 1930 (see panel 1), though there are clear differences in rates of increase and absolute levels across states. For example, in the Northeast region, the primarily rural states of Maine, Vermont, and New Hampshire had relatively small Black populations across the time period. In Maine, reported Black populations were between 300 and 2400 during this period (1% sample data, NO standard errors REPORTED HERE because it's a pain but I'll keep working on it). By contrast, states with large and growing cities, like New York, New Jersey, and Pennsylvania all had large Black populations that grew substantially between 1870 and 1930. For example, Pennsylvania's Black population was recorded at about 70,000 in 1870, and 430,000 in 1930.
-
-Note that some places described in these plots were not admitted as states at the beginning of this time period (CHECK US CENSUS QUALITY IN TERRITORIES), and were intensely contested in military and non-military conflicts between the US government and tribal nations. MORE HERE. HOW DOES CONTESTATION ENTER INTO THE STAT PROCESS? CENSUS IS COUNTING SETTLERS + ENSLAVED, SO THATS STILL VALID FOR CONTEXTS OF SET COL ASSUMING GOOD TERRITORIAL MEASUREMENT (CHECK THIS!).
-
-Similar population trends are evident in the North Central region (commonly referred to as the Midwest). States with large cities, like Illinois, Ohio, Missouri, and Michigan had both relatively high Black populations at the beginning of the period and saw substantial growth in these populations over time. For example, the US Census recorded about 31,000 Black residents in Illinois in 1870. By 1930, the Census recorded about 330,000 Black residents of Illinois. Note that some of these places were not admitted as states at the beginning of this time period. (CHECK US CENSUS QUALITY IN TERRITORIES), and were sites of ongoing military conflicts between the US government and tribal nations.
-
-In the Western Region, states reported uniformly small Black populations at the beginning of this period, with varying (but positive) rates of growth. Note that many of these places were not yet states at the beginning of the time series; only California, Oregon, and Nevada had been admitted as states by 1870. California recorded the largest Black population by the end of the period. The Census records an increase in Black population in California from about 3000 in 1870 to about 84,000 in 1930. Arizona, Colorado, and Washington had smaller but substantial Black populations by the end of the time period, at around 10,000 persons. 
-
-In the Southern Region (which includes all states that seceded to join the former Confederate States of America in addition to Delaware, Maryland, West Virginia, Kentucky, and Oklahoma), Black populations were consistently large during this period, with the largest populations in states in which white elites had enslaved millions of Black people for work in plantation-driven agriculture, like Georgia, Mississippi, and South Carolina. For example, the Census recorded 540,000 Black residents of Georgia in 1870, increasing to 1,100,000 Black residents in 1930. 
-
-Note though, that these increases in population size do not always mirror trends in relative population composition (see Panel 2). During this period, even as Black populations grew dramatically in some Northeastern and Midwestern states during the first Great Migration, proportional population shares of Black residents remained low and relatively stable. In the South, even as Black populations continued to grow in absolute terms, the proportional population share of Black residents was decreasing consistently throughout the region. 
-
-This divergence between absolute and relative population trends illustrates that Black population share likely fails to adequately capture the salience of race for local political contexts. 
-
-next let's look at sharecropping
+First, I evaluate the bivariate relationship between Black farm residency and Black tenant farm residency. The gap between the line y=x and plotted values indicates the number of Black people living on farms owned by their family. Tenant farming was the dominant mode of farming for Black farmers in all states with a substantial population of Black farmers in 1920. Virginia appears to be the only state with a substantial share of Black farm owners as of 1920. In states like Georgia, Mississippi, and South Carolina, these data clearly illustrate the dominance of the tenant-farming based sharecropping system. 
 
 ```{r}
 ggplot(dat %>% 
@@ -420,7 +409,7 @@ dat %>%
   labs(fill = "Number of Black residents\non tenant farms\n(note logarithmic scale)")
 ```
 
-Places with large Black pops in 1920 also had very high sharecropping rates. Not a perfect correlation, VA and FL are negative off-trend, and lots of variance for low Black pop states, probably just measurement error though. Likely makese sense to use sharecropping as log count rather than as proportion. 
+Places with large Black pops in 1920 also had very high sharecropping rates. Not a perfect correlation, VA and FL are negative off-trend, and lots of variance for low Black pop states, probably just measurement error though. Likely makes sense to use sharecropping as log count rather than as proportion. 
 
 ### Settlers and indigenous disposession
 
